--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -6,5 +6,11 @@
 @import './layout/header.scss';
 @import './layout/footer.scss';
 
+@import "./helper/form-square";
+@import "./helper/utilities";
+
 
 @import './pages/index.scss';
+@import './pages/products';
+@import './pages/success';
+@import './pages/carts';
