--- a/assets/scss/helper/_variables.scss
+++ b/assets/scss/helper/_variables.scss
@@ -307,6 +307,9 @@ $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
 // scss-docs-end theme-color-variables
+$primary-200: $info;
+$primary-500: #8DA291;
+
 
 // scss-docs-start theme-colors-map
 $theme-colors: (
@@ -420,7 +423,11 @@ $spacers: (
   2: 10px,
   3: 15px,
   4: 20px,
-  5: 25px,
+  5: 30px,
+  6: 60px,
+  7: 70px,
+  8: 80px,
+  9: 105px
 ) !default;
 // scss-docs-end spacer-variables-maps
 
@@ -432,6 +439,7 @@ $spacers: (
 $position-values: (
   0: 0,
   50: 50%,
+  75: 75%,
   100: 100%
 ) !default;
 // scss-docs-end position-map
@@ -441,7 +449,7 @@ $position-values: (
 // Settings for the `<body>` element.
 
 $body-text-align:           null !default;
-$body-color:                $gray-900 !default;
+$body-color:                $primary; // $gray-900 !default;
 $body-bg:                   $white !default;
 
 $body-secondary-color:      rgba($body-color, .75) !default;
@@ -510,8 +518,8 @@ $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1140px,
-  xxl: 1320px
+  xl: 1140px
+  // xxl: 1320px
 ) !default;
 // scss-docs-end container-max-widths
 
@@ -523,7 +531,7 @@ $container-max-widths: (
 // Set the number of columns and specify the width of the gutters.
 
 $grid-columns:                12 !default;
-$grid-gutter-width:           1.5rem !default;
+$grid-gutter-width:            42px;//1.5rem !default;
 $grid-row-columns:            6 !default;
 
 // Container padding
@@ -551,8 +559,8 @@ $border-color-translucent:    rgba($black, .175) !default;
 
 // scss-docs-start border-radius-variables
 $border-radius:               0; // .375rem !default;
-$border-radius-sm:            .25rem !default;
-$border-radius-lg:            .5rem !default;
+$border-radius-sm:            0;//.25rem !default;
+$border-radius-lg:            0;//.5rem !default;
 $border-radius-xl:            1rem !default;
 $border-radius-xxl:           2rem !default;
 $border-radius-pill:          50rem !default;
@@ -1193,10 +1201,10 @@ $nav-underline-link-active-color:   var(--#{$prefix}emphasis-color) !default;
 // Navbar
 
 // scss-docs-start navbar-variables
-$navbar-padding-y:                  $spacer * .5 !default;
+$navbar-padding-y:                  30px; //$spacer * .5 !default;
 $navbar-padding-x:                  null !default;
 
-$navbar-nav-link-padding-x:         .5rem !default;
+$navbar-nav-link-padding-x:         30px; //.5rem !default;
 
 $navbar-brand-font-size:            $font-size-lg !default;
 // Compute the navbar-brand padding-y so the navbar-brand will have the same height as navbar-text and nav-link
@@ -1598,9 +1606,9 @@ $list-group-item-bg-scale:          -80% !default; // Deprecated in v5.3.0
 $list-group-item-color-scale:       40% !default; // Deprecated in v5.3.0
 // fusv-enable
 
-$list-group-hover-bg:               var(--#{$prefix}tertiary-bg) !default;
-$list-group-active-color:           $component-active-color !default;
-$list-group-active-bg:              $component-active-bg !default;
+$list-group-hover-bg:               $info;//var(--#{$prefix}tertiary-bg) !default;
+$list-group-active-color:           $primary;//$component-active-color !default;
+$list-group-active-bg:              $info;//$component-active-bg !default;
 $list-group-active-border-color:    $list-group-active-bg !default;
 
 $list-group-disabled-color:         var(--#{$prefix}secondary-color) !default;
