--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,167 @@
-.index-title {
-  font-size: 100px;
+// banner
+
+$main-height: 496px;
+.header {
+  position: relative;
+}
+
+.header .header-main-image {
+  height: $main-height;
+}
+
+.header .header-image-context {
+  position: absolute;
+  right: 40px;
+  top: 40px;
+}
+
+$rectangle-image-height: 256px;
+// rectangle intro box
+.header .rectangle-section {
+  margin-top: -90px;
+}
+
+.header .rectangle-image-wrap {
+  height: $rectangle-image-height;
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+  writing-mode: vertical-lr;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-decoration: none;
+  & + .rectangle-image-wrap {
+    border-left: 1px solid white;
+  }
+  .rectangle-over {
+    background-color: rgba($primary, .8);
+    transition: background-color .5s;
+  }
+
+  // 互動樣式
+  &.active, &:hover, &:focus {
+    color: $primary;
+    font-weight: bolder;
+    .rectangle-over {
+      background-color: rgba($secondary, .8);
+    }
+    .rectangle-image {
+      filter: blur(0);
+    }
+  } 
+}
+
+.header .rectangle-text {
+  font-size: 24px;
+  letter-spacing: 10px;
+}
+
+.header .rectangle-image {
+  position: absolute;
+  right: -10px;
+  left: -10px;
+  top: -10px;
+  bottom: -10px;
+  filter: blur(5px);
+  z-index: -2;
+  transition: filter .5s;
+}
+
+// section
+
+.section {
+  .vertical-content {
+    max-height: 420px;
+    line-height: 2;
+    @include media-breakpoint-up(md) {
+      line-height: 2.5;
+    }
+  }
+  .break-vertical-block {
+    @include media-breakpoint-up(md) {
+      margin-top: -24px;
+      margin-bottom: -24px;
+    }
+  }
+
+  .section-intro-image1 {
+    min-height: 250px;
+    background-image: url(https://images.unsplash.com/photo-1519730722595-a5ff788dea4d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2712a33fe9b13532f0682ac4e1e749b8&auto=format&fit=crop&w=600&q=60);
+    @include media-breakpoint-down(md) {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+  }
+
+  .section-intro-image2 {
+    min-height: 250px;
+    background-image: url(https://images.unsplash.com/photo-1497052254059-f3e0bf1a5133?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ce7267675921fc7e41b5610f49750a40&auto=format&fit=crop&w=685&q=80);
+    @include media-breakpoint-down(md) {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+  }
+}
+
+// recommend
+.item-card {
+  display: flex;
+  flex-direction: column;
+
+  // level 2
+  .item-image {
+    height: 315px;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+  }
+
+  .item-body {
+    border: 1px solid $primary-200;
+  }
+
+
+  // level 3
+  .item-tag {
+    position: absolute;
+    left: 20px;
+    top: 0;
+    background-color: $primary;
+    writing-mode: vertical-lr;
+    padding: 15px 10px;
+    color: white;
+    letter-spacing: 5px;
+  }
+
+  .item-name, .item-price {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: $font-size-lg;
+  }
+  .item-name {
+    border-right: 1px solid $primary-200;
+  }
+
+  .item-started-icon {
+    position: absolute;
+    top: 20px;
+    right: 22px;
+  }
+}
+
+.ui-checked-display {
+  cursor: pointer;
+  .ui-show, .ui-checkbox {
+    display: none;
+  }
+  .ui-checkbox:checked {
+    & ~ .ui-show {
+      display: block;
+    }
+    & ~ .ui-hidden {
+      display: none;
+    }
+  }
 }
